# django-app-polls

./: .gitignore  LICENSE  setup.cfg
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py  0002_question_question_author.py
polls/static/polls/: app.js  style.css
polls/templates/polls/: detail.html  index.html  results.html
